--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     </div>
         <div id="baiTap" class="content">
             <h2>Danh Sách Bài Tập</h2>
+            <h3>Buổi3</h3>
             <ul>
                 <li><a href="nda11b4.html">Bài tập 1.1</a></li>
                 <li><a href="nda12b4.html">Bài tập 1.2</a></li>
@@ -85,6 +86,11 @@
                 <li><a href="nda32b4.html">Bài tập 3.2</a></li>
                 <li><a href="nda33b4.html">Bài tập 3.3</a></li>
                <li><a href="nda4b4.html">Bài tập 4</a></li>
+            </ul>
+            <h3>Buổi4</h3>
+            <ul>
+                <li><a href="bai1b5.html">Bài tập 1</a></li>
+                <li><a href="nda4b4.html">Bài tập 2</a></li>
             </ul>
         </div>
   
